[package]
name = "rss_checker"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = "0.12"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
rayon = "1"
reqwest = { version = "0.12", features = ["blocking"] }
rss = "2"
url = "2"
